Fix a possible overflow issue with the charts in the wysiwyg
Widgets with inputs could overflow. Example: http://atlas.kicks-ass.net/testing123?l=fr

--- a/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
+++ b/app/assets/stylesheets/components/shared/c-vizz-wysiwyg.scss
@@ -31,7 +31,7 @@
   }
 
 
-  .c-we-chart, .c-we-chart .chart, .c-we-chart .chart canvas {
+  .c-we-chart, .c-we-chart .chart {
     height: 250px;
     width: 100%;
   }
